--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
+                            <img class="img-fluid" src="https://i.gyazo.com/0f7a69b21008ed95f66138c77712f764.gif" alt="" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -268,7 +268,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="https://i.gyazo.com/0f7a69b21008ed95f66138c77712f764.gif" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5"></p>
                                     <button class="btn btn-primary" data-dismiss="modal">
