--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">ワケアリ野菜発注アプリ</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -235,7 +235,7 @@
                                     <img class="img-fluid rounded mb-5" src="https://i.gyazo.com/4c39d0f28369dc22c749459dc70e03bf.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
                                     <a href="https://order-app-33910.herokuapp.com/" class="mb-5">
-                                        <p class="mb-5">ワケアリ野菜発注アプリ</p>
+                                        <p class="mb-5">ここをクリック</p>
                                     </a>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -260,7 +260,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">フリマアプリコピーサイト</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -270,7 +270,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://i.gyazo.com/0f7a69b21008ed95f66138c77712f764.gif" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"></p>
+                                    <a href="https://furima-33910.herokuapp.com/" class="mb-5">
+                                        <p class="mb-5">ここをクリック</p>
+                                    </a>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
